@@ -16,6 +16,7 @@ license = "MIT"
 thiserror = "1.0"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"], optional = true }
+trust-dns-proto = "0.21.2"
 
 [dev-dependencies]
 criterion = "0.3"
